# deskvox

cmake/: FindOpenCL.cmake
virvo/: CMakeLists.txt
virvo/virvo/: CMakeLists.txt  splatrend.cpp  splatrend.h  vvrenderer.h  vvrendererfactory.cpp
virvo/virvo/cl/: utils.cpp  utils.h
virvo/virvo/cl/kernel/: kdsort.cl  mem.h  spheres.cl
virvo/virvo/splatrend/: CMakeLists.txt
vox-desk-qt/src/: vvprefdialog.cpp
